# docs/swagger.json
@@ -1,22 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "Guapi Teste API",
+        "contact": {},
         "version": "1.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v1/",
     "paths": {
         "/v1/chatroom": {
             "post": {
@@ -28,7 +16,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "createRoom"
+                    "Room"
                 ],
                 "summary": "Create Chat room",
                 "parameters": [
@@ -38,7 +26,186 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.ChatRoomEntity"
+                            "$ref": "#/definitions/handler.requestBodySwagger"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/chatroom/{id}": {
+            "delete": {
+                "description": "Delete Chat Room",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Room"
+                ],
+                "summary": "Delete Chat Room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "chat_room_id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/message/dislike/{id}": {
+            "delete": {
+                "description": "Deslike a message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Deslike a message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "messageId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/message/like/{id}": {
+            "patch": {
+                "description": "Like a message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Like a message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "messageId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/participants": {
+            "post": {
+                "description": "Create Participant",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "createParticipant"
+                ],
+                "summary": "Create Participant",
+                "parameters": [
+                    {
+                        "description": "user request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.participantsSwagger"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/subscribe": {
+            "post": {
+                "description": "Create subscription",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "createSubscribe"
+                ],
+                "summary": "Create subscription",
+                "parameters": [
+                    {
+                        "description": "user request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/swaggerModels.SubscribeSwaggerModel"
                         }
                     }
                 ],
@@ -57,21 +224,43 @@
         }
     },
     "definitions": {
-        "entity.ChatRoomEntity": {
+        "handler.Error": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.participantsSwagger": {
             "type": "object",
             "properties": {
                 "chat_room_id": {
                     "type": "string"
                 },
+                "is_subscribe": {
+                    "type": "boolean"
+                },
+                "participant_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.requestBodySwagger": {
+            "type": "object",
+            "properties": {
                 "chat_room_name": {
                     "type": "integer"
                 }
             }
         },
-        "handler.Error": {
+        "swaggerModels.SubscribeSwaggerModel": {
             "type": "object",
             "properties": {
-                "message": {
+                "chat_room_id": {
+                    "type": "string"
+                },
+                "participant_id": {
                     "type": "string"
                 }
             }
