# internal/Handler/chat_room_handler.go
@@ -12,6 +12,9 @@ import (
 type Error struct {
 	Message string `json:"message"`
 }
+type requestBodySwagger struct {
+	ChatRoomName int32 `json:"chat_room_name"`
+}
 
 type ChatRoomHandler struct {
 	dbHandler *db.Queries
@@ -27,11 +30,11 @@ func NewChatRoomHandler(dbHandler *db.Queries) *ChatRoomHandler {
 // ShowAccount godoc
 // @Summary      Create Chat room
 // @Description  Create Chat room
-// @Tags         createRoom
+// @Tags         Room
 // @Accept       json
 // @Produce      json
-// @Param        request body entity.ChatRoomEntity true "user request"
-// @Success      201 
+// @Param        request body requestBodySwagger true "user request"
+// @Success      201
 // @Failure      500  {object}  Error
 // @Router       /v1/chatroom [post]
 func (s *ChatRoomHandler) CreateChatRoom(c echo.Context) error {
@@ -60,6 +63,16 @@ func (s *ChatRoomHandler) CreateChatRoom(c echo.Context) error {
 	return c.JSON(http.StatusCreated, chatRoomEntity)
 }
 
+// ShowAccount godoc
+// @Summary      Delete Chat Room
+// @Description  Delete Chat Room
+// @Tags         Room
+// @Accept       json
+// @Produce      json
+// @Param   	id path string true "chat_room_id"
+// @Success      200
+// @Failure      500  {object}  Error
+// @Router       /v1/chatroom/{id} [delete]
 func (s *ChatRoomHandler) DeleteChatRoom(c echo.Context) error {
 	idParam := uuid.MustParse(c.Param("id"))
 	res, err := s.dbHandler.DeleteChatRoom(c.Request().Context(), idParam)
